# SortVisualizer

./: CMakeLists.txt  README.md
forms/: graphics.qrc  mainwindow.ui  shaders.qrc  visualizerwidget.ui
forms/shaders/: frag.glsl  vertex.glsl
include/: Sort.h  barsort.h  mainwindow.h  visualizerwidget.h
src/: Sort.cpp  barsort.cpp  main.cpp  mainwindow.cpp  visualizerwidget.cpp
